# miro

./: .gitignore  .rgignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  flake.nix  main.odin  odinfmt.json  ols.json  sample.typ
.github/: FUNDING.yml
.github/workflows/: cachix.yml  flake_update.yml  main.yml  publish.yml
.opencode/: opencode.db-shm  opencode.db-wal
.pi/skills/cargo/: SKILL.md
.pi/skills/github/: SKILL.md
assets/: coordinate_points.typ  default.conf  links.typ  multiple-page-layouts.typ  resources.rc
common/: platform.odin  rendering.odin  types.odin
demo/: main.odin
hot_reload/: app.exp  build.nu  build.sh  main.odin
hot_reload/app/: app.odin
hot_reload/release/: main.odin
hot_reload/reload/: main.odin
mupdf/: document.odin  mupdf.odin  pixmap.odin  store.odin
nix/: module.nix  package.nix
render/: rect.odin  shader.odin  text.odin  text_test.odin
src/: app.rs  bookmarks.rs  common_menu.rs  config.rs  custom_serde_functions.rs  icons.rs  jumplist.rs  keymap.rs  macos_menu.rs  main.rs  old_pdf.rs  pdf.rs  recent_files.rs  rpc.rs  watch.rs
src/geometry/: mod.rs
src/pdf/: cache.rs  inner.rs  link_detection.rs  link_extraction.rs  mod.rs  outline_extraction.rs  page_layout.rs  text_extraction.rs  widget.rs  worker.rs
src/platform_specific/: iced_aw.rs  macos.rs  mod.rs
