[package]
name = "miro"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-watcher = "0.3.0"
clap = {version = "4.5.32", features = ["derive"] }
colorgrad = "0.7.1"
iced = {version = "0.13.1", features = ["advanced", "image", "tokio", "web-colors"] }
iced_aw = { version = "0.12.2", default-features = false, features = ["menu"] }
iced_fonts = "0.2.0"
keybinds = { version = "0.1.1", features = ["iced", "serde"] }
mupdf = { git = "https://github.com/messense/mupdf-rs.git", rev = "ee58c1ea" }
num = "0.4.3"
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
