[package]
name = "miro-pdf"
version = "0.4.1"
edition = "2024"
license-file = "LICENSE"
description = "A native pdf viewer for Windows and Linux (Wayland/X11) with configurable keybindings."
homepage = "https://vincentuden.xyz"
repository = "https://github.com/vincent-uden/miro"
readme = "README.md"

[dependencies]
anyhow = "1.0.97"
arboard = { version = "3.6.0", features = ["wayland-data-control"] }

async-watcher = "0.3.0"
axum = "0.8.4"
clap = {version = "4.5.32", features = ["derive"] }
colored = "2.1.0"
colorgrad = "0.7.1"
home = "0.5.11"
iced = {version = "0.13.1", features = ["advanced", "image", "tokio", "web-colors", "lazy", "svg"] }
iced_aw = { version = "0.12.2", default-features = false, features = ["menu"] }
iced_fonts = "0.2.0"
keybinds = { version = "0.1.1", features = ["iced", "serde"] }
logos = "0.15.0"
mupdf = { version = "0.4.4", git = "https://github.com/messense/mupdf-rs.git", rev = "ee58c1ea" }
num = "0.4.3"
once_cell = "1.21.3"
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
twox-hash = { version = "2.1.1", features = ["serialize"] }
